# vllm-huggingface

./: .gitignore  Dockerfile  endpoints-entrypoint.sh  pyproject.toml
.github/workflows/: sync-to-docker-hub.yaml
examples/: deploy.py  inference-internvl-test.py  inference.py
