[tool.poetry]
name = "vllm-huggingface"
version = "0.1.0"
description = ""
authors = ["Yushi Homma <hommayushi3@gmail.com>", "Moritz Laurer <moritz@huggingface.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "0.25.1"
python-dotenv = "^1.0.1"
openai = "^1.40.2"
pillow = "^10.4.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
